[package]
name = "wr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.44"
chrono = "0.4.19"
clap = {version = "2.33", features = ["yaml"]}
dialoguer = "0.9.0"
duct = "0.13.5"
git2 = "0.13"
gitlab = "*"
indicatif = "0.16.2"
lazy_static = "1.4.0"
log = "0.4.0"
regex = "1"
semver = "1.0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
simplelog = "^0.10.0"
