[package]
name = "wr"
version = "0.1.20"
edition = "2021"
description = "A Rust tool to deploy websites with ease, using git-flow and Gitlab CI/CD."
license = "MIT"
homepage = "https://github.com/aeyoll/wr"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
clap = {version = "3.2.25", features = ["derive"]}
dialoguer = "0.11.0"
duct = "0.13.7"
git2 = "0.19.0"
gitlab = "*"
indicatif = "0.17.9"
lazy_static = "1.5.0"
log = "0.4.22"
regex = "1"
semver = "1.0.23"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
simplelog = "0.12.2"
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tempfile = "3.8"
mockall = "0.12"
httpmock = "0.7"
serial_test = "3.0"
